--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,130 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.networking, .resource, .skilldev, .details, .stories, .about {
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: 3rem;
+} 
+
+.home {
+  display: flex;
+  flex-direction: column; 
+  height: 100vh;
+  align-items: center;
+  justify-content: center; 
+  background-color: whitesmoke;
+
 }
 
-.App-link {
-  color: #61dafb;
+.home h1 {
+  font-size: 3rem;
+  justify-self: flex-start;
+  align-self: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home h2 {
+  font-size: 1rem;
+  align-self: center; 
+  justify-self: center; 
+  text-align: center; 
+  padding: 30vh;
+}
+
+.jobboard {
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  align-items: center;
+  justify-content: center; /* Align vertically in the middle */
+  background-color: whitesmoke;
+}
+
+.jobboard h1 {
+  font-size: 40px;
+  text-align: center; /* Align center horizontally */
+  align-self: center; /* Align center vertically */
+}
+
+.jobboard h2, .jobboard h6 {
+  font-size: 20px;
+  text-align: left;
+  align-self: flex-start;
+  margin-left: 10px; /* Adjust the left margin as needed */
+  margin-top: 0; /* Add this to remove the default top margin */
+}
+
+.jobboard h3, .jobboard h7 {
+  font-size: 15px;
+  text-align: left;
+  align-self: flex-start;
+  margin-top: 10px;
+  margin-left: 10px; /* Adjust the left margin as needed */
+}
+
+.jobboard h4, .jobboard h8 {
+  display: flex;
+  flex-direction: column;
+  font-size: 15px;
+  text-align: left;
+  align-self: flex-start;
+  margin-top: 10px;
+  margin-left: 10px; /* Adjust the left margin as needed */
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.jobboard h5, .jobboard h9 {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  text-align: left;
+  align-self: flex-start;
+  margin-top: 10px;
+  margin-left: 10px; /* Adjust the left margin as needed */
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.jobboard .line {
+  border: none;
+  border-top: 1px solid black; /* Specify the line color and style */
+  margin: 20px ; /* Adjust the margin as needed */
+  margin-top: 10px;
+}
+
+.jobboard ul {
+  font-size: 15px;
+  padding-left: 400px;
+}
+
+.skilldev {
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  align-items: center;
+  justify-content: center; /* Align vertically in the middle */
+  background-color: whitesmoke;
+}
+
+.skilldev h1 {
+  font-size: 40px;
+  text-align: center; /* Align center horizontally */
+  align-self: center; /* Align center vertically */
+}
+
+.skilldev h2 {
+  font-size: 20px;
+  text-align: left;
+  align-self: flex-start;
+  margin-left: 10px; /* Adjust the left margin as needed */
+  margin-top: 0; /* Add this to remove the default top margin */
 }
